--- a/Task1/src/Server/views/submission.ejs
+++ b/Task1/src/Server/views/submission.ejs
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Submission Result</title>
+
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            justify-content: center;
+            font-size: 28px;
+
+        }
+        p{
+            color: #183059;
+            font-size: 50px;
+        }
+        h1{
+            color:#0056b3 ;
+
+            margin-top: 200px;
+        }
+    </style>
 </head>
 <body>
 <h1>Thank you for Visiting us, <%= name %>!</h1>
