--- a/Task4/style.css
+++ b/Task4/style.css
@@ -38,8 +38,7 @@ form label {
 
 form input[type="text"],
 form input[type="email"],
-form input[type="number"],
-form input[type="date"] {
+form input[type ="password"]{
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
