--- a/Task6/only-backend-app/views/login.ejs
+++ b/Task6/only-backend-app/views/login.ejs
@@ -91,7 +91,7 @@ button[type="submit"]:hover {
 </head>
 <body>
     
-    <h1 id="heading">Progressia Login</h1>
+    <h1 id="heading">Cognifyz Login</h1>
     <form id="registrationForm" action="http://localhost:8000/api/v1/users/login" method="POST">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
