--- a/Task7/oauth/src/App.css
+++ b/Task7/oauth/src/App.css
@@ -92,3 +92,30 @@ body{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
 }
+
+
+
+.internship-card {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.internship-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+@media (max-width: 768px) {
+  .internships-container {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+
+
